added test code and tests for StudentRecord

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="components/studentrecord.js"></script>
     <script type="text/javascript" src="components/model.js"></script>
-    <script type="text/javascript" src="components/view.js"></script>
+    <script type="text/javascript" src="components/sgt.js"></script>
     <script src="script.js"></script>
+    <script type="text/javascript" src="tests/tests.js"></script>
     <meta name="viewport" content="initial-scale=1, user-scalable=no">
 </head>
 <body>
