added all tests

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="components/model.js"></script>
     <script type="text/javascript" src="components/sgt.js"></script>
     <script src="script.js"></script>
+    <link rel="stylesheet" type="text/css" href="tests/tests.css">
     <script type="text/javascript" src="tests/tests.js"></script>
     <meta name="viewport" content="initial-scale=1, user-scalable=no">
 </head>
