--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="components/studentrecord.js"></script>
-    <script type="text/javascript" src="components/model.js"></script>
+    <script type="text/javascript" src="components/student.js"></script>
     <script type="text/javascript" src="components/sgt.js"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="tests/tests.css">
